# site

./: README.md  docker-compose.yml  pyproject.toml
MyShop/: .env.template  main.py
MyShop/alembic/versions/: 2024_06_03_1939-93ea87e07938_create_users_table.py  2024_06_03_2114-f23d3b558980_create_users_table.py  2024_06_03_2145-c34bc20d115f_create_product_tabl_e.py  2024_06_03_2319-b2675fb4cfd6_base.py  2024_06_03_2338-98b0ab52affe_profile.py  2024_06_09_2142-24fc51753fcc_add_quantity_to_product.py  2024_06_10_0032-34cb374c5b11_add_email_to_user.py  2024_06_10_0335-ba729382264e_add_profile.py  2024_06_10_1922-79972395c2d0_add_password_to_user_table.py  2024_06_10_1940-cec027fe3b8e_fixed_unique_username.py  2024_06_10_2001-ab7ad4b6c258_added_token_table.py  2024_06_11_2223-e29eff00185e_add_order_table.py  2024_06_11_2240-cd2effbb119a_order.py  2024_06_12_0035-02413aa870aa_add_user_id_to_order.py  2024_06_13_0502-1f345f777c65_qwerty.py  2024_06_13_0657-c23d8a8c7ae2_delete_promocode_order_cart.py  2024_06_13_0715-2aa3a1c6b384_true_order.py  2024_06_13_0847-eeb579ca0145_true_order_fix.py  2024_07_24_0013-d69817748188_add_role.py  (+2 more)
MyShop/auth/: README.md  utils.py
MyShop/core/: config.py
MyShop/crud/: users.py
MyShop/pages/: 140w.html  200w.html  base.html  goods.html  index.html  r1500.html  r600.html  s200.html  s2000pro.html  s300.html  s700.html
MyShop/secure/: __init__.py
MyShop/templates/: base.html  cart.html  create_profile.html  edit_profile.html  home.html  index.html  noorders.html  orders.html  product.html  products.html  profile.html
(+57 files in other folders)
